--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "git+git@github.com:arnaudjuracek/titre-de-pornos.git"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^3.0.0",
     "dotenv": "^8.2.0",
-    "google-translate-api": "^2.3.0",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.1",
     "xml2js": "^0.4.22"
